tests/protocol_v3/snapshots/protocol_v3__basic_responses__absolute_form_local_page_url.snap
---
source: tests/protocol_v3/basic_responses.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": [
      "application/json"
    ],
    "vary": [
      "X-Inertia"
    ],
    "x-inertia": [
      "true"
    ]
  },
  "body": {
    "type": "json",
    "value": {
      "component": "Users/Show",
      "props": {
        "errors": {},
        "user": {
          "id": 123,
          "name": "Ada"
        }
      },
      "url": "/users/123?tab=profile",
      "version": "asset-version-v3"
    }
  }
}
